--- a/css/stylesheet2.css
+++ b/css/stylesheet2.css
@@ -4,7 +4,12 @@
     color: rgb(37, 48, 59);
     line-height: 1.5em;
     margin: 0;
-    padding: auto;
+    padding: 0;
+}
+
+#wrapper {
+    width: 80%;
+    margin: auto;
 }
 
 body {
@@ -23,6 +28,13 @@ header {
     list-style-type: none;
     font-size: 1em;
     text-align: center;
+}
+
+header, nav, footer {
+    text-align: center;
+    padding-bottom: 2em;
+    width: 100%;
+    height: 100%;
 }
 
 nav, footer {
