--- a/css/stylesheet2.css
+++ b/css/stylesheet2.css
@@ -2,7 +2,7 @@
     font-family: 'DM Sans', sans-serif;
     font-size: 1.1em;
     color: rgb(37, 48, 59);
-    line-height: 1.5em;
+    line-height: 150%;
     margin: 0;
     padding: 0;
 }
@@ -19,20 +19,32 @@ body {
     background-repeat:repeat;
 }
 
+#instagram {
+    position: fixed;
+    width: 4%;
+    top: 3%;
+    right: 3%;
+    z-index: auto;
+}
+
 header {
     text-align: center;
+    background-image: url(/unflat02.github.io/images/twisp.jpeg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    padding-top: 5%;
 }
 
 #mainNav {
     list-style-type: none;
-    font-size: 1em;
+    font-size: 80%;
     text-align: center;
     display: inline;
 }
 
 header, nav, footer {
     text-align: center;
-    padding-bottom: 2em;
+    padding-bottom: 5%;
     width: 100%;
     height: 100%;
 }
@@ -41,20 +53,13 @@ nav, footer {
     font-size: .8em;
 }
 
-nav, header {
-    background-image: url(/unflat02.github.io/images/twisp.jpeg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    padding-top: 1em;
-}
-
 .bio {
-    padding-top: 2em;
-    padding-bottom: 2em;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .copy {
-    padding:2em;
+    padding: 1%;
 }
 
 h1 {
@@ -78,12 +83,12 @@ ul {
 
 li {
     display: inline;
-    padding: 2em;
+    padding: 5%;
     white-space: nowrap;
 }
 
 article p, footer p, hr {
-    margin-top: 2em;
+    margin-top: 5%;
 }
 
 
@@ -96,36 +101,39 @@ article p, footer p, hr {
 
 /* End Columns CSS */
 
+
 div.expContainer {
     font-size: .8em;
 }
 
 div.expContainer>h2 {
+    text-align: center;
+    text-decoration: underline;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 2em;
-    
+    color: rgb(171, 237, 254);
+    padding-bottom: 5%;
+    overflow: auto;
+}
+
+div.expContainer>h3 {
+    text-align: center;
+    font-size: 1.2em;
+    overflow: auto;
 }
 
 div.expContainer>p {
     width: 50%;
-    padding-bottom: 2em;
-    font-size: 1.2em;
+    padding-bottom: 5%;
 }
 
-div.expRow {
-    margin-bottom: 2em;
-    padding: 1%;
-    background-color: rgba(0, 0, 0, .05);
+.expRow {
+    margin-bottom: 5%;
 }
 
-.textPad {
-    padding-right: 2em;
-    font-size: 1em;
-}
-
-.flexy {
-    padding: 2em;
+.Activities {
+    padding-right: 5%;
 }
 
 .flexbox {
@@ -135,10 +143,14 @@ div.expRow {
 }
 
 .flexbox > div {
-        width: 30%;
-        padding: 1%;
-        background-color: rgba(0, 0, 0, .05);
-    }
+    width: 30%;
+    background-color: rgba(0, 0, 0, .05);
+    padding: 1%;
+}
+
+.textPad {
+    font-size: .8em;
+}
 
 a:link {
     color: rgb(51, 102, 153); 
@@ -151,5 +163,3 @@ a:visited {
 a:hover {
     color: rgb(0, 177, 204);
 }
-
-
