--- a/css/stylesheet2.css
+++ b/css/stylesheet2.css
@@ -48,11 +48,65 @@ header {
     display: inline;
 }
 
-header, nav, footer {
+header, nav {
     text-align: center;
     padding-bottom: 5%;
     width: 100%;
     height: 100%;
+}
+
+footer {
+    text-align: left;
+    padding-bottom: 5%;
+    width: 100%;
+    height: 100%;
+}
+
+h1#chloe {
+    text-transform: uppercase;
+    font-weight: 500;
+    color: rgb(47, 156, 181);
+    transition: color 1s;
+}
+
+h1#chloe:hover, h4:hover {
+    color: rgb(49, 127, 38);
+    font-weight: 1000;
+}
+
+@keyframes bluebird {
+    from {bottom: 0px;}
+    to {bottom: 30px;}
+}
+
+img#bluebird {
+    
+    display: inline;
+    position: relative;
+    bottom: 0px; /* start */
+    bottom: 0px; /* end */
+    z-index: -1;
+    animation-name: bluebird;
+    animation-duration: 5s;
+    animation-delay: 1s;
+    animation-direction: alternate;
+    animation-iteration-count: 2;     
+}
+
+@keyframes blueblue {
+    0%   { transform: translate( 1000%, 0%); }
+    100% { transform: translate( 0%, 0); }
+}
+
+
+img#blueblue {
+    animation-name: blueblue;
+    animation-duration: 5s;
+    animation-iteration-count: 2;
+    animation-timing-function: cubic-bezier(1, 1.1, 0, 1);
+    animation-fill-mode: forwards;
+    animation-delay: 0.5s;
+    animation-direction: alternate;
 }
 
 nav, footer {
